--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,9 @@
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="/" class="nav-link px-2 link-dark">Accounts</a></li>
+          <li><a href="/accounts" class="nav-link px-2 link-dark">Accounts</a></li>
           <li><a href="/tweets" class="nav-link px-2 link-dark">Tweets</a></li>
+          <li><a href="/themes" class="nav-link px-2 link-dark">Themes</a></li>
           <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
         </ul>
 
