--- a/app/assets/stylesheets/application/tweets.sass
+++ b/app/assets/stylesheets/application/tweets.sass
@@ -16,3 +16,13 @@
       font-size: 10px
       top: 0px
       right: 3px
+.lexem
+  &__themes
+    &__theme
+      font-size: 12px
+      background: #CCCCCC
+      color: black
+      display: inline-block
+      padding: 2px 5px
+      border-radius: 3px
+      margin: 0 10px 10px 0
