--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,20 +15,17 @@
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
           Semantic Bird
         </a>
-
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
           <li><a href="/accounts" class="nav-link px-2 link-dark">Accounts</a></li>
           <li><a href="/tweets" class="nav-link px-2 link-dark">Tweets</a></li>
           <li><a href="/themes" class="nav-link px-2 link-dark">Themes</a></li>
           <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
         </ul>
-
-        <div class="col-md-3 text-end">
-          <button type="button" class="btn btn-outline-primary me-2">Login</button>
-          <button type="button" class="btn btn-primary">Sign-up</button>
-        </div>
       </header>
       <main>
+        <% if notice %>
+          <p id="notice"><%= notice %></p>
+        <% end %>
         <%= yield %>
       </main>
     </div>
