--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -10,7 +10,6 @@
   var app = angular.module('Lexems', []);
   app.controller('LexemsController', function LexemsController($scope, $http) {
     $scope.load = function () {
-      $scope.lexemSelected = null;
       $http.get('<%= tweet_path(format: :json) %>')
         .then(function (event) {
           $scope.lexems = event.data.lexems;
@@ -37,9 +36,12 @@
   <div class="row">
     <div class="col-md-8">
       <div  class="lexems__lexem align-top"
-            ng-repeat="lexem in lexems"
+            ng-repeat="lexem in lexems track by $index"
             ng-click="select(lexem)"
-            ng-class="{ 'lexems__lexem--selected': lexem === lexemSelected }">
+            ng-class="{
+              'lexems__lexem--selected': lexem.index === lexemSelected.index,
+              'lexems__lexem--with-themes': lexem.themes.length > 0
+            }">
         <span class="lexems__lexem__index">{{ lexem.index }}</span>
         <span class="lexems__lexem__value">{{ lexem.value }}</span>
         <div class="lexems__lexem__themes">
@@ -52,11 +54,11 @@
     <div class="col-md-4">
       <div ng-show="lexemSelected">
         <div class="themes">
-          <div  class="themes__theme btn btn-primary btn-sm me-2 mb-2"
+          <span  class="themes__theme btn btn-secondary btn-sm me-2 mb-2"
                 ng-repeat="theme in themes"
                 ng-click="toggle(theme)">
             {{ theme.name }}
-          </div>
+          </span>
         </div>
       </div>
     </div>
