--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Accounts</h1>
 
+<%= link_to 'New Account', new_account_path, class: 'btn btn-primary btn-sm' %>
+
 <table class="table">
   <thead>
     <tr>
@@ -24,7 +26,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Account', new_account_path %>
