--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,14 @@
   </head>
   <body>
     <div class="container">
-      <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-          Semantic Bird
+      <header class="text-center pt-3">
+        <a href="/">
+          <%= image_tag 'logo.svg', width: 300 %>
         </a>
-        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <ul class="nav my-4 justify-content-center">
           <li><a href="/accounts" class="nav-link px-2 link-dark">Accounts</a></li>
           <li><a href="/tweets" class="nav-link px-2 link-dark">Tweets</a></li>
           <li><a href="/themes" class="nav-link px-2 link-dark">Themes</a></li>
-          <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
         </ul>
       </header>
       <main>
@@ -33,6 +32,9 @@
         <% end %>
         <%= yield %>
       </main>
+      <footer class="text-muted small mt-5">
+        Raven Ampersand by Kristin Burrows from the Noun Project
+      </footer>
     </div>
   </body>
 </html>
