--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,40 +1,69 @@
-<p><%= link_to @tweet.account, @tweet.account %></p>
-
 <script type="text/javascript">
   var app = angular.module('Lexems', []);
+
+  app.directive('themeSelector', function() {
+    return {
+      restrict: 'E',
+      scope: {
+        themesAtLevel: '=themes',
+        controller: '='
+      },
+      templateUrl: 'theme-selector.html'
+    };
+  });
+
   app.controller('LexemsController', function LexemsController($scope, $http) {
-    $scope.load = function () {
-      $http.get('<%= tweet_path(@tweet, format: :json) %>')
-        .then(function (event) {
-          $scope.tweet = event.data;
-        });
-    }
-    $scope.load();
+    $http.get('<%= tweet_path(@tweet, format: :json) %>')
+      .then(function (event) {
+        $scope.tweet = event.data;
+      });
     $http.get('<%= themes_path(format: :json) %>')
       .then(function (event) {
         $scope.themes = event.data;
       })
     $scope.select = function (lexem) {
       $scope.lexemSelected = lexem;
-    }
-    $scope.toggle = function (theme) {
-      $http.post('/themes/' + theme.id + '/toggle', { lexem: $scope.lexemSelected.value, tweet: $scope.tweet.id } )
-        .then(function (event) {
-          $scope.tweet = event.data;
-        })
-    }
+    };
+    this.toggle = function (theme) {
+      $http.post('/themes/' + theme.id + '/toggle', {
+        lexem: $scope.lexemSelected.value,
+        tweet: $scope.tweet.id
+      } ).then(function (event) {
+        $scope.tweet = event.data;
+      })
+    };
+    this.isThemeSelected = function (theme) {
+      var found = false;
+      if ($scope.lexemSelected) {
+        angular.forEach($scope.lexemSelected.themes, function(value, key) {
+          if (theme.id === value.id) {
+            found = true;
+          }
+        });
+      }
+      return found;
+    };
   });
+
 </script>
 
-<div class="lexems mt-5" ng-app="Lexems" ng-controller="LexemsController">
-  <blockquote class="blockquote">{{ tweet.text }}</blockquote>
-  <a ng-href="{{ tweet.url }}" class="btn btn-primary btn-sm" target="_blank" rel="noreferrer">See on twitter</a>
 
-  <h2 class="mt-5">Themes</h2>
-  <div class="themes">
-    <span class="themes__theme" ng-repeat="theme in tweet.themes">
-      {{ theme.name }}
-    </span>
+<div class="lexems mt-5" ng-app="Lexems" ng-controller="LexemsController as lexemsController" ng-cloak>
+  <div class="row">
+    <div class="col-md-8">
+      <blockquote class="blockquote">{{ tweet.text }}</blockquote>
+      <p><a ng-href="tweet.account.path">{{ tweet.account.name }}</a></p>
+      <a ng-href="{{ tweet.url }}" class="btn btn-primary btn-sm" target="_blank" rel="noreferrer">See on twitter</a>
+    </div>
+    <div class="col-md-4">
+      <div class="themes">
+        <div ng-repeat="theme in tweet.themes" class="mb-2">
+          <span class="themes__theme btn btn-secondary">
+            {{ theme.name }}
+          </span>
+        </div>
+      </div>
+    </div>
   </div>
 
   <h2 class="mt-5">Lexem analysis</h2>
@@ -42,7 +71,7 @@
     <div class="col-md-8">
       <h3>Lexems</h3>
       <div  class="lexems__lexem align-top"
-            ng-repeat="lexem in tweet.lexems track by $index"
+            ng-repeat="lexem in tweet.lexems track by lexem.index"
             ng-click="select(lexem)"
             ng-class="{
               'lexems__lexem--selected': lexem.index === lexemSelected.index,
@@ -58,16 +87,21 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div ng-show="lexemSelected">
-        <h3>Themes</h3>
-        <div class="themes">
-          <span  class="themes__theme btn btn-secondary btn-sm me-2 mb-2"
-                ng-repeat="theme in themes"
-                ng-click="toggle(theme)">
-            <span ng-show="theme.parent">{{ theme.parent }} /</span>
+      <script type="text/ng-template" id="theme-selector.html">
+        <div  class="themes__theme"
+              ng-repeat="theme in themesAtLevel track by theme.id">
+          <span class="themes__theme__name btn btn-sm mb-2"
+                ng-class="controller.isThemeSelected(theme) ? 'btn-secondary' : 'btn-light'"
+                ng-click="controller.toggle(theme)">
             {{ theme.name }}
           </span>
-        </div>
+          <div class="themes__theme__children" ng-show="controller.isThemeSelected(theme)">
+            <theme-selector themes="theme.children" controller="controller"></theme-selector>
+          </div>
+      </script>
+      <div ng-show="lexemSelected">
+        <h3>Themes</h3>
+        <theme-selector themes="themes" controller="lexemsController"></theme-selector>
       </div>
     </div>
   </div>
