--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -1,3 +1,7 @@
+<%= line_chart @themes.map { |theme|
+    {name: theme.name, data: theme.tweets.group_by_day(:created_at, last: 30).count}
+} %>
+
 <h1>Themes</h1>
 
 <%= link_to 'New Theme', new_theme_path, class: button_classes %>
