--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,4 +1,4 @@
-<%= line_chart Tweet.group_by_day(:created_at, last: 30).count %>
+<%= line_chart Tweet.group_by_day(:created_at, last: 30).count, legend: false %>
 
 <h1>Tweets</h1>
 
