--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,4 +1,4 @@
-<%= line_chart @theme.tweets.group_by_day(:created_at, last: 30).count, legend: false %>
+<%= line_chart @theme.tweets.group_by_week(:created_at, last: 10).count, legend: false %>
 
 <h1><%= @theme %></h1>
 
