--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -1,5 +1,5 @@
 <%= line_chart @themes.map { |theme|
-    {name: theme.name, data: theme.tweets.group_by_day(:created_at, last: 30).count}
+    {name: theme.name, data: theme.tweets.group_by_week(:created_at, last: 10).count}
 }, legend: :bottom %>
 
 <h1>Themes</h1>
