--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,2 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300;700&family=Lora&display=swap')
+@import "variables"
 @import "bootstrap"
 @import "application/*"
