--- a/app/assets/stylesheets/application/themes.sass
+++ b/app/assets/stylesheets/application/themes.sass
@@ -1,3 +1,18 @@
+.theme
+  background: #CC0000
+  color: white
+  font-size: 12px
+  text-decoration: none
+  text-transform: uppercase
+  padding: 3px 10px 5px
+  border-radius: 15px
+  margin: 0 5px 10px 0
+  display: inline-block
+  font-weight: bold
+  transition: background-color 0.2s ease
+  &:hover
+    color: white
+    background: #990000
 .themes
   &__theme
     position: relative
