--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,28 +11,13 @@
   </head>
   <body>
     <div class="container">
-      <header class="text-center pt-3">
-        <a href="/">
-          <%= image_tag 'logo.svg', width: 300 %>
-        </a>
-        <ul class="nav my-4 justify-content-center">
-          <li><a href="/accounts" class="nav-link px-2 link-dark">Accounts</a></li>
-          <li><a href="/tweets" class="nav-link px-2 link-dark">Tweets</a></li>
-          <li><a href="/themes" class="nav-link px-2 link-dark">Themes</a></li>
-        </ul>
-      </header>
+      <%= render 'header' %>
       <main>
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <%= render_breadcrumbs builder: BreadcrumbBuilder %>
-          </ol>
-        </nav>
+        <%= render 'breadcrumb' %>
         <%= render 'toastr' %>
         <%= yield %>
       </main>
-      <footer class="text-muted small mt-5">
-        Raven Ampersand by Kristin Burrows from the Noun Project
-      </footer>
+      <%= render 'footer' %>
     </div>
   </body>
 </html>
