--- a/app/assets/stylesheets/application/layout.sass
+++ b/app/assets/stylesheets/application/layout.sass
@@ -16,6 +16,7 @@ header
       text-transform: uppercase
       font-size: 14px
       letter-spacing: 2px
+      font-weight: bold
 
 a
   transition: text-decoration 0.5s
