--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -6,4 +6,4 @@
 <%= link_to 'Edit', edit_account_path(@account), class: button_classes %>
 <%= link_to 'Sync', sync_account_path(@account), method: :post, class: button_classes %>
 
-<%= render 'tweets/list', tweets: @account.tweets %>
+<%= render 'tweets/list', tweets: @tweets %>
