--- a/app/assets/stylesheets/application/layout.sass
+++ b/app/assets/stylesheets/application/layout.sass
@@ -1,3 +1,6 @@
+body
+  background: #f9f9f9
+
 .breadcrumb
   font-size: 12px
 
@@ -9,6 +12,10 @@ h1
     margin-top: -3*$grid-gutter-width
     margin-bottom: 3*$grid-gutter-width
     text-align: center
+
+h2
+  margin-top: 2*$grid-gutter-width
+  margin-bottom: $grid-gutter-width
 
 header
   ul
