--- a/app/assets/stylesheets/application/themes.sass
+++ b/app/assets/stylesheets/application/themes.sass
@@ -1,5 +1,6 @@
 .theme
   background: #CC0000
+  border: 1px solid #CC0000
   color: white
   font-size: 12px
   text-decoration: none
@@ -13,6 +14,14 @@
   &:hover
     color: white
     background: #990000
+  &--small
+    font-size: 10px
+    margin: 0 5px 5px 0
+    padding: 2px 7px
+  &--unselected
+    border: 1px solid #CC0000
+    background: white
+    color: #CC0000
 .themes
   &__theme
     position: relative
