--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -59,8 +59,8 @@
   <div class="row">
     <div class="col-md-8">
       <blockquote class="blockquote">{{ tweet.text }}</blockquote>
+      <a ng-href="{{ tweet.url }}" target="_blank" rel="noreferrer">See on twitter</a>
       <p><a ng-href="{{ tweet.account.path }}">{{ tweet.account.name }}</a></p>
-      <a ng-href="{{ tweet.url }}" class="btn btn-primary btn-sm" target="_blank" rel="noreferrer">See on twitter</a>
     </div>
     <div class="col-md-4">
       <div class="themes">
