--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Themes</h1>
 
 <%= line_chart @themes.map { |theme|
-    {name: theme.name, data: theme.tweets.group_by_week(:created_at, last: 10).count}
+    {name: theme.name, data: theme.tweets.group_by_week(:created_at, last: 10, current: false).count}
 }, legend: :bottom %>
 
 <%= link_to 'New Theme', new_theme_path, class: button_classes %>
