--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,3 +1,9 @@
-<footer class="text-muted small mt-5">
-  Raven Ampersand by Kristin Burrows from the Noun Project
+<hr class="mt-5">
+<footer class="text-muted text-center small my-5">
+  <p>
+    Research project by <a href="https://arnaudlevy.com" target="_blank" rel="noreferrer" class="text-muted">Arnaud Levy</a>,
+    international analysis by <a href="https://patriciaroche.fr" target="_blank" rel="noreferrer" class="text-muted">Patricia Roche</a>,
+    code source on <a href="https://github.com/arnaudlevy/semanticbird" target="_blank" rel="noreferrer" class="text-muted">github</a>,
+    raven Ampersand by Kristin Burrows from the Noun Project
+  </p>
 </footer>
