--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :title, 'Accounts' %>
+
 <h1>Accounts</h1>
 
 <%= link_to 'New Account', new_account_path, class: 'btn btn-primary btn-sm' %>
