--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -3,8 +3,9 @@
     <%= image_tag 'logo.svg', width: 300 %>
   </a>
   <ul class="nav my-4 justify-content-center">
-    <li><a href="/themes" class="nav-link px-2 link-dark">Themes</a></li>
+    <li><a href="/" class="nav-link px-2 link-dark">Home</a></li>
     <li><a href="/tweets" class="nav-link px-2 link-dark">Tweets</a></li>
+    <li><a href="/themes" class="nav-link px-2 link-dark">Themes</a></li>
     <li><a href="/accounts" class="nav-link px-2 link-dark">Accounts</a></li>
   </ul>
 </header>
