--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,4 +1,7 @@
+<%= content_for :title, @theme %>
+
 <h1><%= @theme %></h1>
+
 <p class="small text-muted"><%= @theme.lexems_array.join ', ' %></p>
 
 <%= line_chart @theme.tweets.group_by_week(:created_at, last: 10, current: false).count, legend: false %>
