--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :title, @tweet.to_s.truncate(50) %>
+
 <script type="text/javascript">
   var app = angular.module('Lexems', []);
 
@@ -71,7 +73,7 @@
     </div>
   </div>
 
-  <h2>Teach the bird how to recognize the themes</h2>
+  <h2 class="h4 mt-5">Teach the bird how to recognize the themes in these words</h2>
   <div class="row">
     <div class="col-md-8">
       <div  class="lexems__lexem align-top"
