--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -8,7 +8,11 @@
   legend: false,
   discrete: true,
   library: {
-
+    layout: {
+      padding: {
+        top: 5
+      }
+    },
     scales: {
       xAxes: [
         {
