--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,3 +1,4 @@
+</div>
 <%= area_chart Theme.ordered.map { |theme|
     {
       name: theme.name,
@@ -32,7 +33,7 @@
       ]
     }
   } %>
-
+<div class="container">
 <div class="row mt-5">
   <div class="offset-md-3 col-md-6">
     <p class="lead text-center">Semantic Bird is a twitter thematic analyzer you can teach, just like you would teach a bird, one word at a time. Everytime you add a word to a theme, the bird learns it and will use it for the rest of its life.</p>
