--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -4,6 +4,6 @@
     Research project by <a href="https://arnaudlevy.com" target="_blank" rel="noreferrer" class="text-muted">Arnaud Levy</a>,
     international analysis by <a href="https://patriciaroche.fr" target="_blank" rel="noreferrer" class="text-muted">Patricia Roche</a>,
     code source on <a href="https://github.com/arnaudlevy/semanticbird" target="_blank" rel="noreferrer" class="text-muted">github</a>,
-    raven Ampersand by Kristin Burrows from the Noun Project
+    Raven Ampersand by Kristin Burrows from the Noun Project
   </p>
 </footer>
