--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -2,14 +2,13 @@
 
 <h1>Accounts</h1>
 
-<%= link_to 'New Account', new_account_path, class: 'btn btn-primary btn-sm' %>
-
 <table class="table">
   <thead>
     <tr>
       <th>Name</th>
       <th>Username</th>
       <th>Country</th>
+      <th>Tweets</th>
       <th></th>
     </tr>
   </thead>
@@ -28,3 +27,5 @@
     <% end %>
   </tbody>
 </table>
+
+<%= link_to 'New Account', new_account_path, class: 'btn btn-primary btn-sm' %>
