--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,6 +1,14 @@
 <%= simple_form_for account do |f| %>
-  <%= f.input :name %>
-  <%= f.input :username %>
-  <%= f.input :country %>
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.input :name %>
+    </div>
+    <div class="col-md-4">
+      <%= f.input :username %>
+    </div>
+    <div class="col-md-4">
+      <%= f.input :country, input_html: { class: 'form-select' } %>
+    </div>
+  </div>
   <%= f.button :submit %>
 <% end %>
